@@ -4,7 +4,7 @@
 #
 # Automake input file for the component library.
 #
-# Copyright (C) 2005 Stefan Jahn <stefan@lkcc.org>
+# Copyright (C) 2005, 2008 Stefan Jahn <stefan@lkcc.org>
 #
 # This is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,10 +27,10 @@
 noinst_LIBRARIES = libdigital.a
 
 libdigital_a_SOURCES = digital.cpp inverter.cpp nor.cpp or.cpp nand.cpp \
-  and.cpp xnor.cpp xor.cpp digisource.cpp
+  and.cpp xnor.cpp xor.cpp digisource.cpp buffer.cpp
 
 noinst_HEADERS = digital.h inverter.h nor.h or.h nand.h and.h xnor.h xor.h \
-  digisource.h
+  digisource.h buffer.h
 
 INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/math \
   -I$(top_srcdir)/src/components
