@@ -1,0 +1,36 @@
+/*
+ * buffer.h - logical buffer class definitions
+ *
+ * Copyright (C) 2008 Stefan Jahn <stefan@lkcc.org>
+ *
+ * This is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2, or (at your option)
+ * any later version.
+ * 
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this package; see the file COPYING.  If not, write to
+ * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
+ * Boston, MA 02110-1301, USA.  
+ *
+ * $Id: buffer.h,v 1.1 2008-11-08 20:05:54 ela Exp $
+ *
+ */
+
+#ifndef __BUFFER_H__
+#define __BUFFER_H__
+
+class buffer : public digital
+{
+ public:
+  CREATOR (buffer);
+  void calcOutput (void);
+  void calcDerivatives (void);
+};
+
+#endif /* __BUFFER_H__ */
